test/deployment.yaml
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name:  core-build-system-sa
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: core-build-system-rb
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: edit
subjects:
  - kind: ServiceAccount
    name: core-build-system-sa
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: core-build-system-s3df-ad-group
spec:
  storageClassName: sdf-group-ad
  accessModes:
    - ReadWriteMany
  resources:
    requests:
      storage: 10Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-build-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-build-system
  template:
    metadata:
      labels:
        app: core-build-system
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/scheme: 'http'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
    spec:
      serviceAccountName: core-build-system-sa
      securityContext:
        runAsUser: 46487
        runAsGroup: 1006
      containers:
      - name: core-build-system
        imagePullPolicy: Always
        image: ghcr.io/eed-web-application/core-build-system:sha-ff7bf3d
        envFrom:
        - configMapRef:
            name: env-config-map
        - secretRef:
            name: mongodb-secret
        - secretRef:
            name: application-secrets
        resources:
          limits:
            memory: 1Gi
            cpu: "1000m"
        ports:
        - containerPort: 8080
        # livenessProbe:
        #   httpGet:
        #     path: /actuator/health/liveness
        #     port: 8080
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: core-build-system-s3df-ad-group
          mountPath: /mnt
      # imagePullSecrets:
      # - name: gh-secret
      volumes:
        - name: core-build-system-s3df-ad-group
          persistentVolumeClaim:
            claimName: core-build-system-s3df-ad-group
